# nuage-openstack-nova-esxi

./: .gitignore  AUTHORS  ChangeLog  README.md  README.rst  build_nuage_deb.sh  build_nuage_rpm.sh  setup.cfg  tox.ini
debian/: changelog  control  copyright
esxi_mitaka_nuage_nova/nova/virt/vmwareapi/: vif.py
esxi_nuage_nova/nova/virt/vmwareapi/: vif.py
nuage_nova.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  top_level.txt
nuage_nova/nova/virt/libvirt/: driver.py
nuage_nova_esxi/nova/virt/vmwareapi/: vif.py
rhel/: esxi-mitakanuage-nova.spec  esxi-nuage-nova.spec  nuage-ironic-nova.spec
