[metadata]
name = nuage-nova
summary = "Nuage Networks Nova patches"
description-file =
    README.rst
author = Alcatel-Lucent USA Inc
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nuage_nova
data_files =


